test/compile_errors/stage1/exe/main_missing_name.zig
pub fn (main) void {}

// error
// backend=stage1
// target=native
// output_mode=Exe
//
// tmp.zig:1:5: error: missing function name
